--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "self_mode": false,
-	"autobio": false,
-	"msg_connected": false,
+	"autobio": true,
+	"msg_connected": true,
 	"user_register": false,
 	"anti_delete" : false,
 	"anticall": true,
@@ -9,9 +9,9 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumberr": "62887435047326",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"botname":"Alphabot",
+	"ownerNumberr": "601123550412",
+	"ownername": "ᴹᴿᤎ KhairilOfcི ࿇",
+	"botname":"ᤎBebanBotྂᤅ",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
